# Electronic-retail

./: pyproject.toml
electonic_retail/: manage.py
electonic_retail/electonic_retail/: asgi.py  settings.py  urls.py  wsgi.py
electonic_retail/sales_networks/: apps.py
electonic_retail/sales_networks/models/: __init__.py  node.py  product.py
electonic_retail/sales_networks/utils/: __init__.py  created_updated_mixins.py  network_choices.py
